[project]
name = "imei_graph"
authors = [
    { name = "Store 11", email = "admin@example.com" }
]
description = "Serial number dispute dependency graph for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.frappe]
app_name = "imei_graph"

